# aiform

./: Cargo.toml  README.md
aiform-macros/: Cargo.toml
aiform-macros/src/: lib.rs
examples/: multi_agent.rs  openrouter_tools.rs  simple_agent.rs
src/: agent.rs  agent_tool.rs  conversation.rs  error.rs  lib.rs
