[package]
name = "aiform"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple macros for OpenAI-compatible tool calling and structured output"
repository = "https://github.com/DrewRidley/aiform"
keywords = ["openai", "tools", "llm", "ai", "async"]
categories = ["api-bindings", "web-programming"]

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.20"
aiform-macros = { version = "0.1.0", path = "aiform-macros" }
tokio = { version = "1.0", features = ["full"] }
